@@ -51,7 +51,7 @@ public class FastDateParser extends AbstractMotd implements PositionDateParser {
 
     private static final long serialVersionUID = 1L;
 
-    private static final Locale JAPANESE_IMPERIAL = new Locale("ja", "JP", "JP");
+    private static final Locale JAPANESE_IMPERIAL = Locale.of("ja", "JP", "JP");
     // 用来对正则表达式排序的比较器。('february' 在 'feb'之前)所有条目按区域设置必须是小写的
     private static final Comparator<String> LONGER_FIRST_LOWERCASE = Comparator.reverseOrder();
     private static final ConcurrentMap<Locale, Strategy>[] CACHES = new ConcurrentMap[Calendar.FIELD_COUNT];
